410：migration secure_file_priv

--- a/zh-CN/200.quickstart/500.experience-advanced-features-of-oceanbase/300.experience-parallelly-importing-and-data-compression.md
+++ b/zh-CN/200.quickstart/500.experience-advanced-features-of-oceanbase/300.experience-parallelly-importing-and-data-compression.md
@@ -158,7 +158,7 @@ obclient [test]> GRANT FILE ON *.* to username;
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>由于安全原因，以上授权 SQL 只能使用本地访问执行，不能使用远程 OBClient 执行。即需要在 observer 进程所在机器上登录 OBClient （或者 MySQL 客户端） 执行。</p>
+    <p>由于安全原因，只能使用通过本地连接的 Client 执行修改 <code>secure_file_priv</code> 的 SQL 语句。详细信息请参见 <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a></p>
   </main>
 
 设置完成后，重连会话使设置生效。再设置下会话的事务超时时间，保证执行过程中不会因为超时退出。
