--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/300.deploy-through-a-graphical-interface/100.configuring-the-deploy-environment-through-oat/100.add-server.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/300.deploy-through-a-graphical-interface/100.configuring-the-deploy-environment-through-oat/100.add-server.md
@@ -1,16 +1,6 @@
 # 添加服务器
 
-将服务器添加到 OAT 系统中时，OAT 提供以下服务器初始化配置：
-
-* **OB Server**：适用于专门部署业务使用的 OceanBase 集群和 OBProxy 集群，会执行磁盘相关检查、设置 OBServer 服务器开机自启动脚本用于在系统重启后自动拉起相关进程。
-
-* **OB 产品服务**：适用于专门部署 OMS、OBSharding 等容器化生态产品及其依赖的组件如 InfluxDB 等（MetaDB 除外，对磁盘有要求），会执行 Docker 安装。
-
-* **OB Server + OB 产品服务**： 适用于专门部署 MetaDB 或与其他产品服务共同部署（如 OCP），会执行磁盘检查并安装 docker。由于 MetaDB 使用 Docker daemon 实现开机启动，因此不会设置 OBServer 开机自启动脚本，不适合部署业务 OceanBase 集群。
-
-* 创建 `UID:GID` 是 `500:500` 的 `admin` 组和 `admin` 用户。
-
-* 时钟同步。
+本文主要介绍如何将服务器添加到 OAT 资源池。
 
 <main id="notice" type='explain'>
    <h4>说明</h4>
@@ -19,7 +9,8 @@
 
 ## 前提条件
 
-您的服务器已完成相关配置。详细信息，请参见 [服务器配置](../../200.preparations-before-deploy/200.configure-servers.md)。
+* 您的服务器已完成相关配置。详细信息，请参见 [服务器配置](../../200.preparations-before-deploy/200.configure-servers.md)。
+* 您已安装 OAT。详细信息，请参见 [部署 OAT](../../200.preparations-before-deploy/400.deploy-oat.md)。
 
 ## 操作步骤
 
@@ -49,9 +40,9 @@
 
    **初始化配置：**
 
-   <main id="notice" type='explain'>
-     <h4>说明</h4>
-     <p>不执行初始化配置可能导致服务器无法部署各种 OceanBase 相关服务，建议仅在接管组件或接管产品场景关闭初始化配置。</p>
+   <main id="notice" type='notice'>
+      <h4>注意</h4>
+      <p>部署 OceanBase 集群的服务器和部署 OCP 的服务器需做时钟源同步。</p>
    </main>
 
    |   字段    |          描述         |
@@ -69,4 +60,4 @@
 
 ## 相关文档
 
-[添加服务器](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002026450)
+更多添加服务器的信息，请参见 [添加服务器](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002026450)
