--- a/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
@@ -88,33 +88,27 @@ start_and_end_option:
 
     使用管理员用户（MySQL 模式：`root`；Oracle 模式：`SYS`）登录到集群对应的租户，设置系统变量 `secure_file_priv`，配置导入或导出文件时可以访问的路径。
 
-    系统变量 `secure_file_priv` 用于控制导入或导出到文件时可以访问的路径。默认值为 `NULL`，表示导入、导出被禁用。详细信息，请参见 [secure_file_priv](../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md) 。
-
    <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能使用本地 Client （即：OBClient 所在机器与连接的 OBServer 节点的 IP 地址相同。）执行修改该全局变量的 SQL 语句。</p>
+     <p>由于安全原因，只能使用通过本地连接的 Client 执行修改 <code>secure_file_priv</code> 的 SQL 语句。详细信息请参见 <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a></p>
    </main>
 
     1. 登录到要连接的 OBServer 节点。
 
-        ```bash
+        ```shell
         [xxx@xxx /home/admin]# ssh admin@xxx.xxx.xxx.xxx
         ```
 
     2. 使用 OBClient 客户端通过直连的方式连接租户 `mysql001`。
 
-        ```bash
-        [admin@xxx /home/admin]# obclient -hxxx.xxx.xxx.xxx -P2881 -uroot@mysql001 -p -A
-        Enter password:
-        Welcome to the OceanBase.  Commands end with ; or \g.
-        Your OceanBase connection id is 3221493926
-        Server version: OceanBase 4.0.0.0 (r100000302022111120-7cef93737c5cd03331b5f29130c6e80ac950d33b) (Built Nov 11 2022 20:38:33)
+        ```shell
+        obclient -hxxx.xxx.xxx.xxx -P2881 -uroot@mysql001 -p****** -A
+        ```
 
-        Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
+        或者执行以下命令，通过本地 Unix Socket 连接方式连接租户 mysql001。
 
-        Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-        obclient [(none)]>
+        ```shell
+        obclient -S /home/admin/oceanbase/run/sql.sock -uroot@mysql001 -p******
         ```
 
     3. 设置导出路径为 `/home/admin`。
@@ -124,7 +118,7 @@ start_and_end_option:
         Query OK, 0 rows affected
         ```
 
-3. 使用 `SELECT INTO OUTFILE` 语句导出表 `tbl1` 中的数据。导出文件名为 `tbl1.sql`；指定逗号作为两个字段值之间的标志；对字符串类型的值使用 `"` 字符包裹；使用换行符作为结束标志。
+3. 重新连接数据库后，使用 `SELECT INTO OUTFILE` 语句导出表 `tbl1` 中的数据。导出文件名为 `tbl1.sql`；指定逗号作为两个字段值之间的标志；对字符串类型的值使用 `"` 字符包裹；使用换行符作为结束标志。
 
     ```sql
     obclient [test]> SELECT * INTO OUTFILE '/home/admin/tbl1.sql' 
@@ -136,7 +130,7 @@ start_and_end_option:
 
 4. 登录机器，在设备本地的 `/home/admin` 目录下查看导出的文件信息。
 
-    ```bash
+    ```shell
     [xxx@xxx /home/admin]# cat tbl1.sql
     1,"one",80
     2,"two",90
