--- a/zh-CN/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
+++ b/zh-CN/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
@@ -48,11 +48,9 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
 
     使用管理员用户（MySQL 模式：`root`；Oracle 模式：`SYS`）登录到租户，设置系统变量 `secure_file_priv`，配置导入或导出文件时可以访问的路径。
 
-    系统变量 `secure_file_priv` 用于控制导入或导出到文件时可以访问的路径。默认值为 `NULL`，表示导入、导出被禁用。详细信息，请参见 [secure_file_priv](../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md) 。
-
     <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能使用本地 Client （即：OBClient 所在机器与连接的 OBServer 所在机器的 IP 地址相同。）执行修改该全局变量的 SQL 语句。</p>
+      <p>由于安全原因，只能使用通过本地连接的 Client 执行修改 <code>secure_file_priv</code> 的 SQL 语句。详细信息请参见 <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a></p>
     </main>
 
     1. 登录到要连接 OBServer 节点所在的机器。
@@ -64,17 +62,13 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
     2. 使用 OBClient 客户端通过直连的方式连接租户 `mysql001`。
 
         ```shell
-        [root@ocp-deploy-obnorpm6-8457ccd77d-9g8pz admin]# obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p******
-        -A
-        Welcome to the OceanBase.  Commands end with ; or \g.
-        Your OceanBase connection id is 3221701485
-        Server version: OceanBase 4.1.0.0 (r100000682023020119-c760cbb1023d73a2647f28add283646b1569418f) (Built Feb  1 2023 20:07:36)
+        obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p****** -A
+        ```
 
-        Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
+        或者执行以下命令，通过本地 Unix Socket 连接方式连接租户 mysql001。
 
-        Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-        obclient [(none)]>
+        ```shell
+        obclient -S /home/admin/oceanbase/run/sql.sock -uroot@mysql001 -p******
         ```
 
     3. 设置导入路径为 `/home/admin`。
@@ -84,7 +78,7 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
         Query OK, 0 rows affected
         ```
 
-3. 使用 `LOAD /*+ direct */ DATA` 语句导入数据。
+3. 重新连接数据库后，使用 `LOAD /*+ direct */ DATA` 语句导入数据。
 
     ```shell
     obclient [test]> CREATE TABLE tbl1(col1 INT PRIMARY KEY,col2 INT);
