--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/400.string-of-mysql-mode/200.char-and-varchar-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/400.string-of-mysql-mode/200.char-and-varchar-of-mysql-mode.md
@@ -21,7 +21,7 @@
 
 ## VARCHAR
 
-`VARCHAR` 类型声明的长度为可以存储的最大字符数。例如，`VARCHAR(50)` 表示最多可容纳 50 个字符。
+`VARCHAR` 类型声明的长度 `M` 为可以存储的最大字符数。例如，`VARCHAR(50)` 表示最多可容纳 50 个字符。
 
 语法如下：
 
@@ -33,7 +33,7 @@
 
 `VARCHAR` 列长度可以指定为 0 到 65,535 之间的值。
 
-与 `CHAR` 相比，`VARCHAR` 值存储形式为 1 字符或 2 字符的长度前缀加数据。长度前缀表示值中的字符数。如果值不超过 255 个字节，则该列占用一个字符，如果值可能超过 255 个字节，则占用两个字符。
+与 `CHAR` 相比，`VARCHAR` 值存储形式为 1 字节或 2 字节的长度前缀加数据。长度前缀表示值中的字符数。如果值不超过 255 个字节，则该列占用一个字符，如果值可能超过 255 个字节，则占用两个字符。
 
 对于 `VARCHAR` 列，无论 SQL 模式如何，超过列长度的尾部空格在插入之前会被截断并生成告警。
 
