--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/200.character-set-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/200.character-set-of-mysql-mode.md
@@ -17,8 +17,7 @@ OceanBase 数据库目前支持如下字符集：
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <ul>
-    <li>为支持无缝迁移，OceanBase在语法上将 <code>UTF8</code> 视为 <code>UTF8MB4</code> 的同义词。</li>
-    <li>数据库字符集暂不支持修改。</li>
+    <p>为支持无缝迁移，OceanBase在语法上将 <code>UTF8</code> 视为 <code>UTF8MB4</code> 的同义词。</p>
     </ul>
   </main>
 
