--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/200.string-functions-that-return-a-string-of-oracle-mode/1500.substr-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/200.string-functions-that-return-a-string-of-oracle-mode/1500.substr-of-oracle-mode.md
@@ -15,7 +15,7 @@ SUBSTR(char1,n1[,n2])
 |  参数   |                                                                                                                                                                                                   说明                                                                                                                                                                                                    |
 |-------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | char1 | 需要截取的字符串。字符串类型可为 `CHAR`、`VARCHAR2`、`NCHAR`、`NVARCHAR2` 或 `CLOB`。                                                                                                                                                                                                                                                                                                                                        |
-| n1    | 截取字符串的开始位置，数据类型是 `NUMBER`。 <br>**说明**  <ul><li> 如果 `n1` 为 `0`，则将其视为 `1`，即从 `char1` 第一个字符开始截取。   </li><li> 如果 `n1` 为正，则从 `char1` 第 `n1` 个字符开始查找截取。   </li><li> 如果 `n1` 为负，则从 `char1` 的末尾开始倒数 `n1` 个字符，再开始查找截取。  </li><li> 如果 `n3` 小于 1，则返回 `NULL`。</li></ul>    |
+| n1    | 截取字符串的开始位置，数据类型是 `NUMBER`。 <br>**说明**  <ul><li> 如果 `n1` 为 `0`，则将其视为 `1`，即从 `char1` 第一个字符开始截取。   </li><li> 如果 `n1` 为正，则从 `char1` 第 `n1` 个字符开始查找截取。   </li><li> 如果 `n1` 为负，则从 `char1` 的末尾开始倒数 `n1` 个字符，再开始查找截取。  </li></ul>    |
 | n2    | 要截取的字符串的长度，数据类型是 `NUMBER`，为可选项。 <br>**说明**  <ul><li> 如果不指定 `n2`，则从第 `n1` 个字符开始截取到 `char1` 结束的字符串。  </li><li> 如果 `n2` 小于 `0`，则返回 `NULL`。 </li></ul>                                                                                                                                                                |
 
 ## 返回类型
