--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1000.alter-table-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1000.alter-table-of-oracle-mode.md
@@ -25,7 +25,7 @@ alter_table_action:
         reference_tbl_name(column_name);
     | ALTER INDEX index_name [VISIBLE | INVISIBLE]
 
-    | ADD PARTITION (range_partition_list)
+    | ADD range_partition_list
     | DROP {INDEX | KEY} index_name
     | DROP {PARTITION | SUBPARTITION} partition_name_list [UPDATE GLOBAL INDEXES]
     | DROP TABLEGROUP
@@ -197,9 +197,9 @@ partition_count | subpartition_count:
 | REORGANIZE \[PARTITION\]                       | 分区重组。      |
 | TRUNCATE {PARTITION \| SUBPARTITION}           | 删除分区数据： <ul><li> `PARTITION`：针对 Range、List 类型的一级分区，清除指定分区中的全部数据（如果指定分区下存在二级分区，会同时清除该一级分区下的所有二级分区中的数据），同时对分区上存在的本地索引进行维护。</li>   <li> `SUBPARTITION`：针对 \*-Range、\*-List 类型的二级分区，清除指定二级分区中的全部数据。同时对分区上存在的本地索引进行维护。</li> </ul>   如果指定 `UPDATE GLOBAL INDEXES`，则清除分区数据时会同步更新全局索引；如果不指定，分区表上的全局索引需要处于不可用状态。 多个分区名称之间用逗号分隔。 <br>**注意**  删除分区数据时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者一些异常情况。       |
 | RENAME \[TO\] table_name                       | 表重命名。     |
-| DROP \[TABLEGROUP\]                            | 删除表组。         |
+| DROP TABLEGROUP                           | 删除表组。         |
 | SET TABLEGROUP                                 | 设置表归属于哪个表组。        |
-| DROP \[CONSTRAINT\]                            | 删除约束。    |
+| DROP CONSTRAINT                           | 删除约束。    |
 | SET BLOCK_SIZE                                 | 设置 Partition 表 `BLOCK` 大小。     |
 | SET COMPRESSION                                | 设置表的压缩方式。  |
 | SET USE_BLOOM_FILTER                           | 设置是否使用 BloomFilter。         |
