--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/6.conversion-functions-of-oracle-mode/26.to-char-number-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/6.conversion-functions-of-oracle-mode/26.to-char-number-oracle-mode.md
@@ -23,7 +23,7 @@ TO_CHAR(n [, fmt [, 'nlsparam' ] ])
 | fmt 参数取值 |                                            说明                                            |
 |----------|------------------------------------------------------------------------------------------|
 | 9        | 返回指定位数的值。                                                                                |
-| 0        | 它返回前导 0，它返回尾随 0。                                                                         |
+| 0        | 它返回前导 0。                                                                         |
 | ,（逗号）    | 返回指定位置的逗号。您可以在数字格式模型中指定多个逗号。 <br>**限制条件** ：格式模型数值不能以逗号开头，且逗号不能出现在小数字符或句点的右边。 |
 | .（小数点）   | 返回一个小数，且小数点在指定位置。 <br>**限制条件** ：在数字格式模型中，您只能指定一个小数点。                         |
 
