--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2400.create-table-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2400.create-table-of-oracle-mode.md
@@ -17,10 +17,11 @@ table_definition_list:
 
 table_definition:
       column_definition
-    | INDEX [index_name] index_desc
-    | [CONSTRAINT [constraint_name]] [PRIMARY KEY|UNIQUE]  (column_definition_list) [USING INDEX index_option_list]
-    | [CONSTRAINT [constraint_name]] FOREIGN KEY (column_name, column_name ...) references_clause constraint_state
-    | [CONSTRAINT [constraint_name]] CHECK(expression) constraint_state
+     | [,
+        | [CONSTRAINT [constraint_name]] { PRIMARY KEY|UNIQUE } (column_name) //在创建所有列后添加约束
+        | [CONSTRAINT [constraint_name]] FOREIGN KEY (column_name, column_name ...) references_clause constraint_state
+        | [CONSTRAINT [constraint_name]] CHECK(expression) constraint_state
+       ]
     
 
 column_definition_list:
@@ -45,10 +46,6 @@ references_clause:
 
 constraint_state:
     [RELY | NORELY] [USING INDEX index_option_list] [ENABLE | DISABLE] [VALIDATE | NOVALIDATE]
-
-index_desc:
-   (column_name [, column_name ...]) [index_option_list]
-
 
 index_option_list:
     index_option [ index_option ...]
