--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/900.lock-a-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/900.lock-a-table-of-mysql-mode.md
@@ -1,5 +1,10 @@
 # 锁表
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持表锁功能。</p>
+</main>
+
 表锁是最基本的锁定策略，它锁定整张表，在任意时刻只允许一个会话对该表进行读写操作。您可以通过 `LOCK TABLES` 语句锁定表。
 
 数据库是一个多用户使用的共享资源。当多个用户并发地存取数据时，在数据库中就会产生多个事务同时存取同一数据的情况。若对并发操作不加控制就可能会读取和存储不正确的数据，破坏数据库的一致性。加锁是实现数据库并发控制的一个非常重要的技术。为了确保资源的安全性（也就是数据完整性和一致性）才引申出锁机制。利用其锁机制来实现事务间的数据并发访问及数据一致性。
