--- a/zh-CN/100.learn-more-about-oceanbase/200.differences-between-enterprise-edition-and-community-edition.md
+++ b/zh-CN/100.learn-more-about-oceanbase/200.differences-between-enterprise-edition-and-community-edition.md
@@ -23,6 +23,7 @@ OceanBase 数据库提供企业版和社区版两种形态。
 |高可用| 数据备份恢复| 支持| 支持 |
 |高可用| 资源隔离| 支持| 支持 |
 |高可用| 物理备库| 支持| 支持 |
+|高可用| 仲裁服务| 支持| 不支持|
 |兼容性| MySQL 语法和协议兼容| 支持| 支持 |
 |兼容性| 数据类型与函数兼容| 支持| 支持 |
 |兼容性| 存储过程与包| 支持| 支持 |
