--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md
@@ -9,6 +9,12 @@
     <p>当前版本的 OceanBase 数据库对 MySQL 模式下的 <code>LOCK TABLES</code> 语句将被忽略，并不会对表上锁。</p>
 </main>
 
+
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>目前 OceanBase 数据库社区版暂不支持 <code>LOCK TABLES</code>。</p>
+  </main>
+  
 ## 语法
 
 ```sql
