--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1200.view-cluster-parameters.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1200.view-cluster-parameters.md
@@ -132,4 +132,4 @@
 
 * [租户系统变量](../../200.tenant-management/500.system-variable-of-tenant.md)
 
-有关每个配置项的详细介绍，请参见 [系统配置项](../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/100.system-configuration-items-overview.md)。
+有关每个配置项的详细介绍，请参见 [配置项和系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)。
