--- a/zh-CN/700.reference/100.oceanbase-database-concepts/1200.observer-node-architecture/500.memory-management/200.memory-related-parameters.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/1200.observer-node-architecture/500.memory-management/200.memory-related-parameters.md
@@ -4,7 +4,7 @@ OceanBase 数据库支持通过参数来设置和管理内存的使用。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
-<p>有关以下提到的参数的详细介绍，请参见 <a href="../../../800.configuration-items-and-system-variables/100.system-configuration-items/100.system-configuration-items-overview.md">系统配置项</a> 章节。</p>
+<p>有关以下提到的参数的详细介绍，请参见 <a href="../../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md">配置项和系统变量概述</a> 章节。</p>
 </main>
 
 ## OBServer 节点总内存
