--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -199,7 +199,7 @@ on_commit_option:
 | COMPRESSION                 | 指定存储格式 Flat/Encoding 以及压缩方法，对应如下： <ul><li> `nocompress`：使用 Flat 格式，不进行压缩。</li>   <li> `compress [basic]`：使用 Flat 格式和 lz4_1.0 压缩方法。</li>   <li> `compress for oltp`：使用 Flat 格式和 zstd_1.3.8 压缩方法。</li>   <li>  `query low` 或者 `query high`：使用 Encoding 格式和  lz4_1.0 压缩方法。</li>   <li>  `archive low` 或者 `archive high`：使用 Encoding 格式和 zstd_1.3.8 压缩方法。</li> </ul>   |
 | table_group            | 指定表所属的 Table Group 属性。    |
 | VISIBLE                     | 表示列可见，是默认的列状态。|
-| INVISIBLE                   | 表示列不可见，当将一个列设置为 INVISIBLE 后，在查询时该列将不会被默认显示。|
+| INVISIBLE                   | 表示列不可见，当将一个列设置为 `INVISIBLE` 后，在查询时该列将不会被默认显示。|
 | comment                     | 注释。     |
 | physical_attribute          | `PCTFREE`: 指定宏块保留空间百分比。其它属性 `STORAGE`、`TABLESPACE` 等仅为了语法兼容方便迁移，不生效。    |
 | ENABLE/DISABLE ROW MOVEMENT | 是否允许在不同分区间移动的分区键更新。  |
