--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/200.character-set-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/200.character-set-of-mysql-mode.md
@@ -21,6 +21,11 @@ OceanBase 数据库目前支持如下字符集：
     <p>为支持无缝迁移，OceanBase 数据库在语法上将 <code>UTF8</code> 视为 <code>UTF8MB4</code> 的同义词。</p>
   </main>
 
+ <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>OceanBase 数据库社区版暂不支持 <code>utf8mb4_unicode_ci</code> 和 <code>utf16_unicode_ci</code>。</p>
+  </main>
+  
 要显示可用的字符集，请使用如下 `SHOW CHARACTER SET` 语句。
 
 ```sql
