--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/600.conversion-functions-of-oracle-mode/2600.to-char-number-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/600.conversion-functions-of-oracle-mode/2600.to-char-number-oracle-mode.md
@@ -23,7 +23,7 @@ TO_CHAR(n [, fmt [, 'nlsparam' ] ])
 | fmt 参数取值 |                                            说明                                            |
 |----------|------------------------------------------------------------------------------------------|
 | 9        | 返回指定位数的值。                                                                                |
-| 0        | 它返回前导 0，它返回尾随 0。                                                                         |
+| 0        | 它返回前导 0。                                                                         |
 | ,（逗号）    | 返回指定位置的逗号。您可以在数字格式模型中指定多个逗号。 <br>**限制条件** ：格式模型数值不能以逗号开头，且逗号不能出现在小数字符或句点的右边。 |
 | .（小数点）   | 返回一个小数，且小数点在指定位置。 <br>**限制条件** ：在数字格式模型中，您只能指定一个小数点。                         |
 
@@ -33,14 +33,14 @@ TO_CHAR(n [, fmt [, 'nlsparam' ] ])
 
 ## 示例
 
-将 `123456789.123` 转化为 `999,999,999` 格式的值。
+将 `123456789.123` 转化为 `0999,999,999` 格式的值。
 
 ```sql
-obclient> SELECT TO_CHAR(123456789.123,'999,999,999') FROM DUAL;
+obclient> SELECT TO_CHAR(123456789.123,'0999,999,999') FROM DUAL;
 +--------------------------------------+
-| TO_CHAR(123456789.123,'999,999,999') |
+| TO_CHAR(123456789.123,'0999,999,999') |
 +--------------------------------------+
-|  123,456,789                         |
+|  0123,456,789                         |
 +--------------------------------------+
 1 row in set
 ```
