--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1000.alter-table-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1000.alter-table-of-oracle-mode.md
@@ -24,7 +24,7 @@ alter_table_action:
         reference_tbl_name(column_name);
     | ALTER INDEX index_name [VISIBLE | INVISIBLE]
 
-    | ADD PARTITION (range_partition_list)
+    | ADD range_partition_list
     | DROP {INDEX | KEY} index_name
     | DROP {PARTITION | SUBPARTITION} partition_name_list [UPDATE GLOBAL INDEXES]
     | DROP TABLEGROUP
