--- a/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1200.oceanbase-all-virtual-clog-stat.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1200.oceanbase-all-virtual-clog-stat.md
@@ -20,7 +20,7 @@
 | partition_cnt | bigint(20) | NO | 分区总数 |
 | role | varchar(32) | NO | 副本角色 |
 | status | varchar(32) | NO | 副本当前状态。<ul><li> INIT：初始化</li><li> REPLAY：回放 </li><li> RECONFIRM：leader 重确认日志 </li><li> ACTIVE： 活跃</li><li> TAKING_OVER：leader 接管中</li><li> REVOKING: leader 卸任中</li><li> OB_STATE_UNKNOWN： 未知状态 </li><ul>    |
-| leader | varchar(32) | NO | 副本的主 |
+| leader | varchar(32) | NO | 分区  的主 |
 | last_index_log_id | bigint(20) unsigned | NO | 副本最大 Ilog 日志 ID |
 | last_index_log_timestamp | timestamp(6) | NO | 副本最大 Ilog 日志的时间戳 |
 | last_log_id | bigint(20) unsigned | NO | 副本最大的日志 ID |
