--- a/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/2600.oceanbase-all-virtual-election-event-history.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/2600.oceanbase-all-virtual-election-event-history.md
@@ -19,5 +19,5 @@
 | table_id | bigint(20) | NO | 表 ID |
 | partition_idx | bigint(20) | NO | 分区索引 |
 | event | varchar(64) | NO | 事件 |
-| leader | varchar(64) | NO | 是否是 Leader |
+| leader | varchar(64) | NO | Leader 的地址 |
 | info | varchar(512) | NO | 信息 |
