--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/600.sql-optimization-practice-case.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/600.sql-optimization-practice-case.md
@@ -15,7 +15,7 @@
           COUNT(*)               AS executions,
           SUM(execute_time)      AS tot_cup_time,
           AVG(execute_time)      AS avg_cup_time,
-          SUM(execute_time)      AS cup_cnt,
+          SUM(execute_time)/(30*60*1000*1000)     AS cup_cnt,
           query_sql
        FROM oceanbase.GV$OB_SQL_AUDIT
        WHERE tenant_id= 'mysql001'
@@ -27,7 +27,7 @@
            ORDER BY cup_cnt DESC LIMIT 10;
    ```
 
-   查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))` 类别 SQL 的执行频率和 CPU 使用率较高，大概为 70%（80 c/108 c），而且集中于同一台 OBServer 节点上。
+   查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (...))` 类别 SQL 的执行频率和 CPU 使用率较高，大概为 70%（80 c/108 c），而且集中于同一台 OBServer 节点上。
 
    ```shell
    +----------------------------------+------------+--------------+--------------+---------+------------------------------------------------------------------------------------------------------------------------------------------------------+
