400use Aone：Low error modification

--- a/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
@@ -88,11 +88,9 @@ start_and_end_option:
 
     使用管理员用户（MySQL 模式：`root`；Oracle 模式：`SYS`）登录到集群对应的租户，设置系统变量 `secure_file_priv`，配置导入或导出文件时可以访问的路径。
 
-    系统变量 `secure_file_priv` 用于控制导入或导出到文件时可以访问的路径。默认值为 `NULL`，表示导入、导出被禁用。详细信息，请参见 [secure_file_priv（MySQL 模式）](../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/11500.secure_file_priv-of-mysql-mode.md) 和 [secure_file_priv（Oracle 模式）](../../700.reference/500.system-reference/300.system-variable-of-oracle-mode/11400.secure_file_priv-of-oracle-mode.md)。
-
    <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能使用本地 Client （即：OBClient 所在机器与连接的 OBServer 节点的 IP 地址相同。）执行修改该全局变量的 SQL 语句。</p>
+     <p>由于安全原因，只能使用通过本地连接的 Client 执行修改 <code>secure_file_priv</code> 的 SQL 语句。详细信息请参见 <a href="../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/11500.secure_file_priv-of-mysql-mode.md">secure_file_priv</a>。</p>
    </main>
 
     1. 登录到要连接的 OBServer 节点。
@@ -124,7 +122,7 @@ start_and_end_option:
         Query OK, 0 rows affected
         ```
 
-3. 使用 `SELECT INTO OUTFILE` 语句导出表 `tbl1` 中的数据。导出文件名为 `tbl1.sql`；指定逗号作为两个字段值之间的标志；对字符串类型的值使用 `"` 字符包裹；使用换行符作为结束标志。
+3. 重新连接数据库后，使用 `SELECT INTO OUTFILE` 语句导出表 `tbl1` 中的数据。导出文件名为 `tbl1.sql`；指定逗号作为两个字段值之间的标志；对字符串类型的值使用 `"` 字符包裹；使用换行符作为结束标志。
 
     ```sql
     obclient [test]> SELECT * INTO OUTFILE '/home/admin/tbl1.sql' 
