--- a/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/200.migration-unit.md
+++ b/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/200.migration-unit.md
@@ -34,39 +34,50 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
 
 1. 查看资源单元分布。
 
-    查看租户 `mysql002` 的资源单元在各 zone 的分布情况。
+    执行下面 SQL 语句，查看租户 `mysql001` 的资源单元在各 zone 的分布情况。
 
     ```sql
-    obclient [oceanbase]> SELECT A.UNIT_CONFIG_ID,B.ZONE,B.SVR_IP,B.SVR_PORT,A.NAME,A.MAX_CPU,A.MIN_CPU,A.MEMORY_SIZE,A.LOG_DISK_SIZE,A.MAX_IOPS,A.MIN_IOPS,A.IOPS_WEIGHT FROM DBA_OB_UNIT_CONFIGS A,DBA_OB_UNITS B WHERE A.UNIT_CONFIG_ID=B.UNIT_ID AND A.NAME LIKE '%mysql002%';
-    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
-    | UNIT_CONFIG_ID | ZONE  | SVR_IP         | SVR_PORT | NAME                         | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
-    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
-    |           1007 | zone1 | 10.10.10.1 |     2882 | config_mysql002_zone2_S1_zsv |     1.5 |     1.5 |  6442450944 |   19327352832 |    15000 |    15000 |           1 |
-    |           1008 | zone3 | 10.10.10.3 |     2882 | config_mysql002_zone3_S1_zuk |     1.5 |     1.5 |  6442450944 |   19327352832 |    15000 |    15000 |           1 |
-    |           1009 | zone2 | 10.10.10.2 |     2882 | config_mysql002_zone1_S1_zek |     1.5 |     1.5 |  6442450944 |   19327352832 |    15000 |    15000 |           1 |
-    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
+    SELECT t.TENANT_NAME,u.ZONE,u.UNIT_ID,u.SVR_IP FROM oceanbase.DBA_OB_TENANTS t,oceanbase.DBA_OB_UNITS u WHERE t.TENANT_ID=u.TENANT_ID AND t.TENANT_NAME='mysql001';
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +-------------+-------+---------+------------+
+    | TENANT_NAME | ZONE  | UNIT_ID | SVR_IP     |
+    +-------------+-------+---------+------------+
+    | mysql001    | zone1 |    1002 | 10.10.10.1 |
+    | mysql001    | zone2 |    1004 | 10.10.10.2 |
+    | mysql001    | zone3 |    1006 | 10.10.10.3 |
+    +-------------+-------+---------+------------+
     3 rows in set
     ```
 
 2. 启动资源单元迁移。
 
-    将租户 `mysql002` 的 zone3 中的资源单元从 `10.10.10.3:2882` 迁移至 `10.10.10.4:2882`。
+    执行下面 SQL 语句，将租户 `mysql001` 的 zone3 中的资源单元从 `10.10.10.3:2882` 迁移至 `10.10.10.4:2882`。
 
     ```sql
-    obclient [oceanbase]> ALTER SYSTEM MIGRATE UNIT = 1008 DESTINATION = '10.10.10.4:2882';
-    Query OK, 0 rows affected
+    ALTER SYSTEM MIGRATE UNIT = 1006 DESTINATION = '10.10.10.4:2882';
     ```
 
 3. 查看迁移情况。
 
+    执行下面 SQL 语句，查看租户 `mysql001` 的资源单元迁移后在各 zone 的分布情况。
+
     ```sql
-    obclient [oceanbase]> SELECT A.UNIT_CONFIG_ID,B.ZONE,B.SVR_IP,B.SVR_PORT,A.NAME,A.MAX_CPU,A.MIN_CPU,A.MEMORY_SIZE,A.LOG_DISK_SIZE,A.MAX_IOPS,A.MIN_IOPS,A.IOPS_WEIGHT FROM DBA_OB_UNIT_CONFIGS A,DBA_OB_UNITS B WHERE A.UNIT_CONFIG_ID=B.UNIT_ID AND A.NAME LIKE '%mysql002%';
-    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
-    | UNIT_CONFIG_ID | ZONE  | SVR_IP         | SVR_PORT | NAME                         | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
-    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
-    |           1007 | zone1 | 10.10.10.1 |     2882 | config_mysql002_zone2_S1_zsv |     1.5 |     1.5 |  6442450944 |   19327352832 |    15000 |    15000 |           1 |
-    |           1008 | zone3 | 10.10.10.4 |     2882 | config_mysql002_zone3_S1_zuk |     1.5 |     1.5 |  6442450944 |   19327352832 |    15000 |    15000 |           1 |
-    |           1009 | zone2 | 10.10.10.2 |     2882 | config_mysql002_zone1_S1_zek |     1.5 |     1.5 |  6442450944 |   19327352832 |    15000 |    15000 |           1 |
-    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
+    SELECT t.TENANT_NAME,u.ZONE,u.UNIT_ID,u.SVR_IP FROM oceanbase.DBA_OB_TENANTS t,oceanbase.DBA_OB_UNITS u  WHERE t.TENANT_ID=u.TENANT_ID AND t.TENANT_NAME='mysql001';
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +-------------+-------+---------+------------+
+    | TENANT_NAME | ZONE  | UNIT_ID | SVR_IP     |
+    +-------------+-------+---------+------------+
+    | mysql001    | zone1 |    1002 | 10.10.10.1 |
+    | mysql001    | zone2 |    1004 | 10.10.10.2 |
+    | mysql001    | zone3 |    1006 | 10.10.10.4 |
+    +-------------+-------+---------+------------+
     3 rows in set
     ```
