--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/600.sql-optimization-practice-case.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/600.sql-optimization-practice-case.md
@@ -107,7 +107,7 @@
 
    根据上述 `EXPALIN` 信息，了解得到该条 SQL 的执行总代价估算为 432961，代价主要体现在 3 号算子 `UNION ALL` 部分（代价估算为 397629），`UNION ALL` 的两个分支都包含 `NESTED-LOOP JOIN`，代价估算分别为 151990 和 236327。`UNION ALL` 部分第一个分支（从 4 号到 11 号算子）的主要代价体现在 11 号算子上面，即通过索引 `TBL3(IDX_TBL3_COL170)` 进行 `TABLE SCAN`；第二个分支（从 12 号到 14 号算子）的主要代价体现在 14 号算子上面，也是通过索引 `TBL3(IDX_TBL3_COL170)` 进行 `TABLE SCAN`。由此可见 11 号算子和 14 号算子代价偏高可能都是由于 `TBL3` 的索引导致的，初步定位出该案例中性能问题的瓶颈点。
 
-   接下来再分析 11 号算子和 14 号算子的 Outputs & filters 信息，其中 `range(MIN,MIN ; MAX,MAX)always true` 表明该 SQL执行过程中没有做索引匹配，而 `filter([20017476 = cast(cast(TBL3.COL170(0x7f0cb0ffa210), VARCHAR2(20 BYTE))(0x7f0cb1002fa0), NUMBER(-1, -85))(0x7f0cb1002770)(0x7f0cb1001c70)])` 表明在访问时发生了数据类型的转换，由此得知可能是关联字段的数据类型不统一而进行了数据类型的转换，导致了不可走索引。基于此结论再结合 DDL 定义做进一步的分析。
+   接下来再分析 11 号算子和 14 号算子的 Outputs & filters 信息，其中 `range(MIN,MIN ; MAX,MAX)always true` 表明该 SQL 执行过程中没有做索引匹配，而 `filter([20017476 = cast(cast(TBL3.COL170(0x7f0cb0ffa210), VARCHAR2(20 BYTE))(0x7f0cb1002fa0), NUMBER(-1, -85))(0x7f0cb1002770)(0x7f0cb1001c70)])` 表明在访问时发生了数据类型的转换，由此得知可能是关联字段的数据类型不统一而进行了数据类型的转换，导致了 `TBL3.COL170` 上的索引不能做匹配。基于此结论再结合 DDL 定义做进一步的分析。
 
    ```sql
     11 - output(......), filter([20017476 = cast(cast(TBL3.COL170(0x7f3f5b51c090), VARCHAR2(20 BYTE))(0x7f3f5b51d6b0), NUMBER(-1, -85))(0x7f3f5b51ce80)(0x7f3f5b51c380)]), 
@@ -123,11 +123,11 @@
 
 3. 分析相关表和视图的 DDL 定义，确定出现性能问题的原因。
 
-   首先，从视图 `V_TT01` 的定义中可知, `UNION ALL` 的第一个分支中 `tbl3` 存在于 `NOT EXISTS` 子查询中，结合 `EXPLAIN` 信息，可以得出相关子查询被改写为 `NESTED-LOOP ANTI JOIN`。此外，视图 `V_TT01` 发生了 `TO_NUMBER` 转换，其中的 `col001` 和 `col004` 会传递给 `TBL3` 的索引 `(IDX_TBL3_COL170)`。
+   首先，从视图 `V_TT01` 的定义中可知, `UNION ALL` 的第一个分支中 `tbl3` 存在于 `NOT EXISTS` 子查询中，结合 `EXPLAIN` 信息，可以得出相关子查询被改写为 `NESTED-LOOP ANTI JOIN`。此外，视图 `V_TT01` 发生了 `TO_NUMBER` 转换，其中的 `col001` 和 `col004` 会通过 `col170` 传递给 `TBL3` 的索引 `(IDX_TBL3_COL170)`。
 
    接下来分析表 `TBL3` 的定义，可知索引 `TBL3(IDX_TBL3_COL170)` 定义于 `COL170` 字段，数据类型为 `VARCHAR2(20)`，而该字段就是视图 `V_TT01` 与其他表进行关联的字段。从视图 `V_TT01` 的定义可知，`UNION ALL` 第一个分支中，11 号算子对应的关联为 `"tbl3"."col170" = "tt01"."col001" = 20017476`, 第二个分支中 14 号算子对应的关联为 `"tbl3"."col170" = "tbl2"."col004" = 20017476`，由于关联字段数据类型不一致，所以发生了 `TO_NUMBER` 转换，即将 `COL170` 字段的 `VARCHAR2` 类型被强制转换为了 `NUMBER`。这与 11 号算子和 14 号算子的 Outputs & filters 中的 `filter` 信息相符合。
 
-   综合 DDL 定义和 `EXPALIN` 信息可知，该类别 SQL 执行过程中发生的 To_number 强制转换不合理导致索引性能下降，造成 11 号和 14 号算子的代价估算较大，应该去掉。
+   综合 DDL 定义和 `EXPALIN` 信息可知，该类别 SQL 执行过程中，视图 `V_TT01` 发生的 `TO_NUMBER` 强制转换不合理导致索引性能下降，造成 11 号和 14 号算子的代价估算较大，应该去掉 `TO_NUMBER` 转换。
 
    ```sql
    /* 问题 SQL 的定义 */
@@ -212,8 +212,8 @@
 
   
    * 去除视图中 `TO_NUMBER` 类型转换，优化器选择了更优的 JOIN 顺序，SQL RT 从 2s 降为 150 ms（视图的入参为 `NUMBER` 数据类型，视图中的 `COL001` 在原表中也是 `NUMBER` 类型，所以视图中的 `TO_NUMBER` 强制转换是多余的）。
-   * 将表与视图中的关联字段的数据类型定义统一为 `NUMBER(20)`，规避类型转换后，`TBL3(IDX_TBL3_COL170)` 可以做索引匹配，SQL RT 进一步下降为 20ms。（因为 `TBL3.COL170` 是 `VARCHAR` 数据类型，视图上的查询条件 `COL001 IN ( NUMBER,NUMBER,...)` 传递到 `TBL3.COL170` 时发生了 `VARCHAR` 到 `NUMBER` 的类型转换，导致 `TBL3.COL170` 上的索引不能做匹配）。
-   * 对视图中的 4 张关联表进行分区和表组改造。该视图是业务的入口查询视图，此前使用该视图的 SQL 导致了少数 OBServer 节点的计算资源用满的问题，为了避免该热点视图可能再次成为瓶颈，通过分区改造把视图的查询压力分散到各个 OBServer 节点上，统一对视图中的 4 张关联表按照关联键进行 Hash 分区，并加入表组，避免跨节点的关联查询。改造后，SQL RT进一步下降到 4ms。
+   * 将表与视图中的关联字段的数据类型定义统一为 `NUMBER(20)`，规避类型转换后，使得 `TBL3(IDX_TBL3_COL170)` 可以做索引匹配，SQL RT 进一步下降为 20ms（因为 `TBL3.COL170` 是 `VARCHAR` 数据类型，视图上的查询条件 `COL001 IN ( value,value,...)` 传递到 `TBL3.COL170` 时发生了 `VARCHAR` 到 `NUMBER` 的类型转换，导致 `TBL3.COL170` 上的索引不能做匹配）。
+   * 对视图中的 4 张关联表进行分区和表组改造。该视图是业务的入口查询视图，此前使用该视图的 SQL 导致了少数 OBServer 节点的计算资源用满的问题，为了避免该热点视图可能再次成为瓶颈，通过分区改造把视图的查询压力分散到各个 OBServer 节点上，即统一对视图中的 4 张关联表按照关联键进行 Hash 分区，并加入表组，避免跨节点的关联查询。改造后，SQL RT进一步下降到 4ms。
 
 优化后 SQL 的 Explain 信息如下，`PX PARTITION ITERATOR` 表明只在分区内执行 `UNION ALL`，此时 `TBL3` 上索引的代价非常低，性能得到了很大的提升。
 
