--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
@@ -9,7 +9,7 @@
 
   <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</br>设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
+   <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
   </main>
 
 下文示例中的系统变量 `ob_query_timeout` 用于设置对 SQL 语句进行查询操作的超时时间，单位是微秒。在进行大数据查询操作时，就可以通过调大系统变量 `ob_query_timeout` 的值，避免查询超时导致语句执行失败。
