--- a/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md
+++ b/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md
@@ -8,10 +8,10 @@
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>有关 `DBMS_STATS` 系统包的详细信息，参见 [DBMS_STATS 概述（MySQL 模式）](../../../../../../../700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/100.dbms-stats-overview-mysql.md) 和 [DBMS_STATS 概述（Oracle 模式）](../../../../../../../700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/100.dbms-stats-overview-oracle.md)。</p>
+    <p>有关 <code>DBMS_STATS</code> 系统包的详细信息，参见 <a href="../../../../../../../700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/100.dbms-stats-overview-mysql.md">DBMS_STATS 概述（MySQL 模式）</a> 和 <a href="../../../../../../../700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/100.dbms-stats-overview-oracle.md">DBMS_STATS 概述（Oracle 模式）</a>。</p>
 </main>
 
-```
+```sql
 PROCEDURE gather_table_stats (
   ownname            VARCHAR2,
   tabname            VARCHAR2,
@@ -55,8 +55,8 @@ PROCEDURE gather_schema_stats (
 * `estimate_percent`：指定使用多少比例的数据计算其分布特征，范围为 [0.000001,100]，如果指定为 NULL，则使用所有数据；默认是 AUTO_SAMPLE_SIZE，由优化器内部决定使用多少比例的数据，如无特殊需求，可以不用指定，直接使用默认值即可。
 * `block_sample`：是否使用块采样代替行采样，默认是 FALSE 的。
 * `method_opt`：设置列级别的统计信息收集方式，主要采用下面的语法方式来设定：
-    
-    ```
+
+    ```sql
     method_opt:
     FOR ALL [INDEXED | HIDDEN] COLUMNS [size_clause]
     | FOR COLUMNS [size clause] column [size_clause] [,column [size_clause]...]
@@ -197,5 +197,5 @@ ANALYZE TABLE table_name UPDATE HISTOGRAM ON column_name_list WITH INTNUM BUCKET
 
 ## 相关文档
 
-* [PL 语法结构（MySQL 模式）](../../../../../../../700.reference/400.development-reference/300.pl-reference/200.pl-mysql/100.basic-syntax-mysql.md)
-* [PL 语法结构（Oracle 模式）](../../../../../../../700.reference/400.development-reference/300.pl-reference/300.pl-oracle/100.pl-language-basics-oracle/100.character-set-oracle.md)
+* [PL 语法结构（MySQL 模式）](../../../../../../../700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/100.basic-syntax-mysql.md)
+* [PL 语法结构（Oracle 模式）](../../../../../../../700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/100.pl-language-basics-oracle/100.character-set-oracle.md)
