--- a/zh-CN/600.manage/1000.troubleshooting/400.storage/100.minor-freeze-and-compaction.md
+++ b/zh-CN/600.manage/1000.troubleshooting/400.storage/100.minor-freeze-and-compaction.md
@@ -8,8 +8,8 @@ OceanBase 数据库的存储引擎基于 LSM-Tree 架构，数据大体上被分
 <main id="notice" type='explain'>
     <h4>说明</h4>
     <ul>
-    <li><code>memstore_limit_percentage</code> 用于设置租户使用 MemStore 的内存占其总可用内存的百分比，默认值是 50，取值范围是[1, 99]。有关该配置项的详细信息，参见 [memstore_limit_percentage](../../../700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/13900.memstore_limit_percentage.md)。</li>
-    <li><code>freeze_trigger_percentage</code> 用于设置触发全局冻结的租户使用内存阈值，默认值是 20，取值范围是 (0, 100)。有关该配置项的详细信息，参见 [freeze_trigger_percentage](../../../700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/5400.freeze_trigger_percentage.md)。</li>
+    <li><code>memstore_limit_percentage</code> 用于设置租户使用 MemStore 的内存占其总可用内存的百分比，默认值是 50，取值范围是[1, 99]。有关该配置项的详细信息，参见 <a href="../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/13900.memstore_limit_percentage.md">memstore_limit_percentage</a> 。</li>
+    <li><code>freeze_trigger_percentage</code> 用于设置触发全局冻结的租户使用内存阈值，默认值是 20，取值范围是 (0, 100)。有关该配置项的详细信息，参见 <a href="../../../700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/5400.freeze_trigger_percentage.md">freeze_trigger_percentage</a> 。</li>
     </ul>
 </main>
 
@@ -23,7 +23,7 @@ OceanBase 数据库的存储引擎基于 LSM-Tree 架构，数据大体上被分
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p><code>major_compact_trigger</code> 用于设置多少次转储并触发一次全局合并。取值范围为 [0, 65535]。有关该配置项的详细信息，参见 [major_compact_trigger](../../../700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/1800.major_compact_trigger.md)。</p>
+    <p><code>major_compact_trigger</code> 用于设置多少次转储并触发一次全局合并。取值范围为 [0, 65535]。有关该配置项的详细信息，参见 <a href="../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/1800.major_compact_trigger.md">major_compact_trigger</a>。</p>
 </main>
 
 可以通过以下手段加快触发合并：
