--- a/zh-CN/500.data-migration/200.migrate-data-from-mysql-database-to-oceanbase-database/200.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/500.data-migration/200.migrate-data-from-mysql-database-to-oceanbase-database/200.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
@@ -180,7 +180,7 @@ $tree ~/output/dbcat-20xx-xx-xx-164533/
 
 使用 DBCAT 导出的文件格式为 SQL 文件，这里可以通过 ODC 的导入功能批量将表结构导入 OceanBase 数据库，更多信息请参考 [批量导出与导入](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033324)。
 
-若导入 OceanBase 数据库的 MySQL 租户，也可以使用 source 命令，示例如下：
+也可以使用 `source` 命令将 SQL 文件数据导入 OceanBase 数据库，示例如下：
 
 ```sql
 obclient [test]> source TABLE-schema.sql
