--- a/zh-CN/600.manage/900.performance-tuning/300.identify-bottlenecks-within-components/400.performance-bottlenecks-of-observer/400.capacity.md
+++ b/zh-CN/600.manage/900.performance-tuning/300.identify-bottlenecks-within-components/400.performance-bottlenecks-of-observer/400.capacity.md
@@ -31,7 +31,7 @@
 
     <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p><code>cpu_quota_concurrency</code>用于设置租户的每个 CPU 配额所允许的最大并发数。详细信息，参见 <a href="../../../../700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/5500.cpu_quota_concurrency.md">cpu_quota_concurrency</a>。</p>
+    <p><code>cpu_quota_concurrency</code>用于设置租户的每个 CPU 配额所允许的最大并发数。详细信息，参见 <a href="../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/5500.cpu_quota_concurrency.md">cpu_quota_concurrency</a>。</p>
     </main>
 
 * SQL 限流
