--- a/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md
+++ b/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md
@@ -8,7 +8,7 @@
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>有关 <code>DBMS_STATS</code> 系统包的详细信息，参见 <a href="../../../../../../../700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/100.dbms-stats-overview-mysql.md">DBMS_STATS 概述（MySQL 模式）</a> 和 <a href="../../../../../../../700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/100.dbms-stats-overview-oracle.md">DBMS_STATS 概述（Oracle 模式）</a>。</p>
+    <p>有关 <code>DBMS_STATS</code> 系统包的详细信息，参见 <a href="../../../../../../../700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/100.dbms-stats-overview-mysql.md">DBMS_STATS 概述（MySQL 模式）</a> 和 <a href="../../../../../../../700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/100.dbms-stats-overview-oracle.md">DBMS_STATS 概述（Oracle 模式）</a>。</p>
 </main>
 
 ```sql
