420 update data length

--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/500.large-object-of-mysql-mode/200.blob-type-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/500.large-object-of-mysql-mode/200.blob-type-of-mysql-mode.md
@@ -10,7 +10,7 @@
 
 ## TINYBLOB
 
-`TINYBLOB` 是最大长度为 256 个字节的 `BLOB` 类型。
+`TINYBLOB` 是最大长度为 255 个字节的 `BLOB` 类型。
 
 `TINYBLOB` 语法如下：
 
@@ -40,7 +40,7 @@ MEDIUMBLOB
 
 ## LONGBLOB
 
-`LONGBLOB` 是最大长度为 534773760 或 510 M 字节的 `BLOB` 类型。`LONGBLOB` 列的最大有效长度取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
+`LONGBLOB` 是最大长度为 536870911 字节的 `BLOB` 类型。`LONGBLOB` 列的最大有效长度取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
 
 `LONGBLOB` 语法如下：
 
