--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/400.string-of-mysql-mode/200.char-and-varchar-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/400.string-of-mysql-mode/200.char-and-varchar-of-mysql-mode.md
@@ -21,7 +21,7 @@
 
 ## VARCHAR
 
-`VARCHAR` 类型声明的长度为可以存储的最大字符数。例如，`VARCHAR(50)` 表示最多可容纳 50 个字符。
+`VARCHAR` 类型声明的长度 `M` 为可以存储的最大字符数。例如，`VARCHAR(50)` 表示最多可容纳 50 个字符。
 
 语法如下：
 
@@ -31,7 +31,7 @@
 
 `CHARACTER SET` 用于指定字符集。如果需要，可以使用 `COLLATE` 属性以及其他属性指定字符集的排序规则。如果指定 `CHARACTER SET` 的二进制属性，则会将列创建为相应的二进制字符串数据类型，`VARCHAR` 会变为 `VARBINARY`。
 
-`VARCHAR` 列长度可以指定为 0 到 65,535 之间的值。
+`VARCHAR` 列长度可以指定为 0 到 1,048,576 之间的值。
 
 与 `CHAR` 相比，`VARCHAR` 值存储形式为 1 字符或 2 字符的长度前缀加数据。长度前缀表示值中的字符数。如果值不超过 255 个字节，则该列占用一个字符，如果值可能超过 255 个字节，则占用两个字符。
 
