--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/600.dynamic-sql-oracle/100.dynamic-sql-overview-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/600.dynamic-sql-oracle/100.dynamic-sql-overview-oracle.md
@@ -23,5 +23,5 @@
 OceanBase 数据库 PL 动态 SQL 在如下场景中支持 SQL 返回复杂数据类型：
 
 * 动态 SQL 执行 `SELECT` 语句
-​* ​动态 SQL 执行 DML 语句
+* ​动态 SQL 执行 DML 语句
 * `​EXECUTE IMMEDIATE` 通过 `USING` 子句 `OUT` 属性赋值
