--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/300.basic-elements-of-oracle-mode/1000.character-set-and-collation-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/300.basic-elements-of-oracle-mode/1000.character-set-and-collation-of-oracle-mode.md
@@ -112,7 +112,7 @@ obclient> SELECT a,NLSSORT(a, 'NLS_SORT=SCHINESE_PINYIN2_M' ) FROM t ORDER BY NL
 
 ## gb18030 与 gb18030_2022 间的转换
 
-OceanBase 数据库当前版本不支持 `gb18030` 与 `gb18030_2022` 的隐式转换，但用户可以通过 `CONVERT` 将一个 `gb18030` 的字符串的字符集显式转换为 `gb18030_2022`。该转换没有经过 Unicode，采取了保留编码的方法。如下示例中，‘龴’ 的编码在转换前后都为 0xFE59，没有发生变化。
+OceanBase 数据库当前版本不支持 `gb18030` 与 `gb18030_2022` 的隐式转换，但用户可以通过 `CONVERT` 将一个 `gb18030` 的字符串的字符集显式转换为 `gb18030_2022`。该转换没有经过 Unicode，采取了保留编码的方法。如下示例所示。
 
 ```shell
 obclient> CREATE TABLE t1 (c1 VARCHAR(10));
@@ -156,12 +156,12 @@ obclient > SELECT * FROM t1 WHERE c = '字';
 
 ## 相关文档
 
-[NLSSORT](../500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/200.string-functions-that-return-a-string-of-oracle-mode/800.nlssort-of-oracle-mode.md)。
+[NLSSORT](../500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/200.string-functions-that-return-a-string-of-oracle-mode/800.nlssort-of-oracle-mode.md)
 
-[nls_sort](../../../../800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/5700.nls_sort-global.md)。
+[nls_sort](../../../../800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/5700.nls_sort-global.md)
 
-[nls_characterset](../../../../800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/4500.nls_characterset-global.md)。
+[nls_characterset](../../../../800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/4500.nls_characterset-global.md)
 
-[nls_nchar_characterset](../../../../800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/5400.nls_nchar_characterset-global.md)。
+[nls_nchar_characterset](../../../../800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/5400.nls_nchar_characterset-global.md)
 
 
