--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
@@ -238,4 +238,4 @@
 
 ## 相关文档
 
-* [租户扩缩容介绍](../800.tenant-scale-in-and-out/100.introduction-to-tenant-scale-in-and-out.md)。
+* [租户扩缩容介绍](../800.tenant-scale-in-and-out/100.introduction-to-tenant-scale-in-and-out.md)
