--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/200.adjust-resource-specifications.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/200.adjust-resource-specifications.md
@@ -305,4 +305,4 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 ## 相关文档
 
-* [租户扩缩容介绍](../800.tenant-scale-in-and-out/100.introduction-to-tenant-scale-in-and-out.md)。
+* [租户扩缩容介绍](../800.tenant-scale-in-and-out/100.introduction-to-tenant-scale-in-and-out.md)
