400use Aone：fix

--- a/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
@@ -102,17 +102,7 @@ start_and_end_option:
     2. 使用 OBClient 客户端通过直连的方式连接租户 `mysql001`。
 
         ```bash
-        [admin@xxx /home/admin]# obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p -A
-        Enter password:
-        Welcome to the OceanBase.  Commands end with ; or \g.
-        Your OceanBase connection id is 3221493926
-        Server version: OceanBase 4.0.0.0 (r100000302022111120-7cef93737c5cd03331b5f29130c6e80ac950d33b) (Built Nov 11 2022 20:38:33)
-
-        Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
-
-        Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-        obclient [(none)]>
+        obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p****** -A
         ```
 
     3. 设置导出路径为 `/home/admin`。
