--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/100.function-overview-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/100.function-overview-of-oracle-mode.md
@@ -139,6 +139,10 @@ Query OK, 0 rows affected
 
 JSON 函数对 JSON 值进行创建、操作和搜索等操作。
 
+## XML 函数
+
+XMLType 函数可以高效地查询、更新和搜索 XML 文档。
+
 ## 聚合函数
 
 聚合函数对一组值执行计算并返回单一的值。聚合函数忽略空值。聚合函数经常与 `SELECT` 语句的 `GROUP BY` 子句一同使用。
