--- a/zh-CN/100.learn-more-about-oceanbase/400.compatibility-with-oracle/300.built-in-functions.md
+++ b/zh-CN/100.learn-more-about-oceanbase/400.compatibility-with-oracle/300.built-in-functions.md
@@ -2,7 +2,7 @@
 
 本节主要介绍 OceanBase 数据库的 Oracle 模式与原生 Oracle 数据库中内建函数的详细兼容对比信息。
 
-Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 155 个，更多详细信息请参阅 [函数](../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/1000.ddl-function-of-oracle-mode/100.ddl-function-overview-of-oracle-mode.md)。
+Oracle 数据库（11g）中支持内建函数 257 个，OceanBase 数据库当前支持 166 个，更多详细信息请参阅 [函数](../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/1000.ddl-function-of-oracle-mode/100.ddl-function-overview-of-oracle-mode.md)。
 
 ## 数字函数
 
@@ -113,6 +113,8 @@ Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 
 | 8  | RAWTOHEX             | 支持                |
 | 9  | ROWIDTOCHAR          | 支持                |
 | 10 | ROWIDTONCHAR         | 支持                |
+| 11 | SCN_TO_TIMESTAMP     | 支持                |
+| 12 | TIMESTAMP_TO_SCN     | 支持                |
 | 11 | TO_BINARY_DOUBLE     | 支持                |
 | 12 | TO_BINARY_FLOAT      | 支持                |
 | 13 | TO_BLOB              | 支持                |
@@ -150,6 +152,7 @@ Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 
 | 2  | SYS_GUID      | 支持                |
 | 3  | UID           | 支持                |
 | 4  | USER          | 支持                |
+| 5  | USERENV       | 支持                |
 
 ## 层次函数
 
@@ -167,6 +170,20 @@ Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 
 | 4  | NULLIF        | 支持                |
 | 5  | NVL           | 支持                |
 | 6  | NVL2          | 支持                |
+
+## XML 函数
+
+| 序号 |Oracle 数据库的函数 | OceanBase 数据库是否支持 |
+| ---   | --- | --- |
+| 1   |XMLAGG       | 支持  |
+| 2   |XMLELEMENT | 支持  |
+| 3  |XMLPARSE  |  支持 |
+| 4   |EXTRACT |  支持 |
+| 5   |EXTRACT VALUE | 支持  |
+| 6   |XMLSERIALIZE |  支持 |
+| 7   |XMLCAST | 支持 |
+| 8   |UPDATEXML |  支持 |
+
 
 ## 聚合函数
 
