--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/100.xml-functions-overview-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/100.xml-functions-overview-of-oracle-mode.md
@@ -1,16 +1,16 @@
 # XML 函数概述
 
-OceanBase 数据库当前版本所支持的 JSON 函数如下表所示。
+OceanBase 数据库当前版本所支持的 XML 函数如下表所示。
 
 | **函数名称** | **描述** |
 | --- | --- |
-| XMLAGG | 获取一组 XML 片段并返回一个聚合的 XML 文档。 |
-| XMLATTRIBUTES | 指定 XML 元素中的属性集合。 |
-| XMLELEMENT | 生成具有指定名称、属性和内容的 XML 元素。 |
-| XMLPARSE  | 解析输入的字符串并生成 XMLType 数据类型。 |
-| EXTRACT | 依据 Xpath 抽取一个 XML 片段，其结果是 Xpath 匹配到的所有节点的拼接。 |
-| EXTRACT VALUE | 依据 Xpath 抽取一个 XML 片段并返回标量值。 |
-| XMLSERIALIZE | 将 XMLType 数据序列化为 `VARCHAR2` 或者 `CLOB` 类。 |
-| XMLCAST |抽取 XML 文档的内容（不包括元素名称），并将其转换为其他数据类型。 |
-| UPDATEXML | 用于修改更新 XMLType 数据的表达式。 |
+| [XMLAGG](../1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/100.xmlagg-function-of-oracle-mode.md) | 获取一组 XML 片段并返回一个聚合的 XML 文档。 |
+| [XMLATTRIBUTES](../1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/200.xmlattributes-function-of-oracle-mode.md) | 指定 XML 元素中的属性集合。 |
+| [XMLELEMENT](../1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/300.xmlelement-function-of-oracle-mode.md) | 生成具有指定名称、属性和内容的 XML 元素。 |
+| [XMLPARSE](../1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/400.xmlparse-function-of-oracle-mode.md)  | 解析输入的字符串并生成 XMLType 数据类型。 |
+| [EXTRACT](../1300.xml-functions-of-oracle-mode/300.querying-xmltype-data-functions-of-oracle-mode/100.extract-function-of-oracle-mode.md) | 依据 Xpath 抽取一个 XML 片段，其结果是 Xpath 匹配到的所有节点的拼接。 |
+| [EXTRACT VALUE](../1300.xml-functions-of-oracle-mode/300.querying-xmltype-data-functions-of-oracle-mode/200.extract-value-function-of-oracle-mode.md) | 依据 Xpath 抽取一个 XML 片段并返回标量值。 |
+| [XMLSERIALIZE](../1300.xml-functions-of-oracle-mode/300.querying-xmltype-data-functions-of-oracle-mode/300.xmlserialize-function-of-oracle-mode.md) | 将 XMLType 数据序列化为 `VARCHAR2` 或者 `CLOB` 类。 |
+| [XMLCAST](../1300.xml-functions-of-oracle-mode/300.querying-xmltype-data-functions-of-oracle-mode/400.xmlcast-function-of-oracle-mode.md) |抽取 XML 文档的内容（不包括元素名称），并将其转换为其他数据类型。 |
+| [UPDATEXML](../1300.xml-functions-of-oracle-mode/400.modify-xmltype-data-functions-of-oracle-mode/100.updatexml-function-of-oracle-mode.md) | 用于修改更新 XMLType 数据的表达式。 |
 
