--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1200.json-functions-oracle-mode/100.json-functions-overview-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1200.json-functions-oracle-mode/100.json-functions-overview-oracle.md
@@ -4,14 +4,15 @@ OceanBase 数据库当前版本所支持的 JSON 函数如下表所示。
 
 | **函数名称** | **描述** |
 | --- | --- |
-| JSON_ARRAY | 创建 JSON 数组。 |
-| JSON_OBJECT | 创建 JSON 对象。 |
-| JSON_ARRAYAGG | 创建 JSON 数组的汇聚函数。 |
-| JSON_OBJECTAGG | 创建 JSON 对象的汇聚函数。 |
-| JSON_VALUE | 抽取 JSON 文本在指定路径下的值，一般用于返回标量，默认返回值为 `VARCHAR2(4000)` 或用户指定的值。 |
-| JSON_QUERY | 抽取 JSON 文本在指定路径下的值，可以返回数组或对象，默认返回值类型受输入数据类型的影响，如果输入是 `VARCHAR` 默认输出是 `VARCHAR`；如果输入数据类型为 JSON，则默认返回值类型是 JSON。 |
-| JSON_EXISTS | JSON 文本在指定路径下的字段是否存在，或者满足某些条件。 |
-| JSON_MERGEPATCH | 合并两个 JSON 文本, 并且会替换重复的键值。 |
-| JSON_EQUAL | 两个 JSON 文本是否内容等同。 |
-| IS JSON | 判断文本是否是合法的 JSON 数据。 |
-| JSON_TABLE | 将 JSON 数据转换成二维表。 |
+| [JSON_ARRAY](../1200.json-functions-oracle-mode/200.create-json-text-function-oracle/100.json-array-oracle-mode.md) | 创建 JSON 数组。 |
+| [JSON_OBJECT](../1200.json-functions-oracle-mode/200.create-json-text-function-oracle/200.json-object-oracle-mode.md)| 创建 JSON 对象。 |
+| [JSON_ARRAYAGG](../1200.json-functions-oracle-mode/200.create-json-text-function-oracle/300.json-arrayagg-oracle-mode.md) | 创建 JSON 数组的汇聚函数。 |
+| [JSON_OBJECTAGG](../1200.json-functions-oracle-mode/200.create-json-text-function-oracle/400.json-objectagg-oracle-mode.md) | 创建 JSON 对象的汇聚函数。 |
+| [JSON_VALUE](../1200.json-functions-oracle-mode/300.query-json-text-function-oracle/100.json-value-oracle-mode.md) | 抽取 JSON 文本在指定路径下的值，一般用于返回标量，默认返回值为 `VARCHAR2(4000)` 或用户指定的值。 |
+| [JSON_QUERY](../1200.json-functions-oracle-mode/300.query-json-text-function-oracle/200.json-query-oracle-mode.md) | 抽取 JSON 文本在指定路径下的值，可以返回数组或对象，默认返回值类型受输入数据类型的影响，如果输入是 `VARCHAR` 默认输出是 `VARCHAR`；如果输入数据类型为 JSON，则默认返回值类型是 JSON。 |
+| [JSON_EXISTS](../1200.json-functions-oracle-mode/300.query-json-text-function-oracle/300.json-exists-oracle-mode.md) | JSON 文本在指定路径下的字段是否存在，或者满足某些条件。 |
+| [JSON_TABLE](../1200.json-functions-oracle-mode/300.query-json-text-function-oracle/400.json-table-oracle-mode.md) | 将 JSON 数据转换成二维表。 |
+| [JSON_EQUAL](../1200.json-functions-oracle-mode/400.validate-json-text-function-oracle/100.json-equal-oracle-mode.md) | 两个 JSON 文本是否内容等同。 |
+| [JSON_MERGEPATCH](../1200.json-functions-oracle-mode/500.modify-json-text-function-oracle/100.json-mergepatch-oracle-mode.md) | 合并两个 JSON 文本, 并且会替换重复的键值。 |
+
+
