--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
@@ -9,7 +9,7 @@
 
   <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>设置 Global 级别变量时，对于 MySQL 租户，要求当前用户拥有 <code>SUPER</code> 权限或 <code>ALTER SYSTEM</code> 权限；对于 Oracle 租户，要求当前用户拥有 <code>ALTER SYSTEM</code> 权限。设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../500.security-and-permissions/300.access-control/200.user-and-permission/100.user-and-permission-overview.md">用户和权限概述</a>。</p>
+   <p>设置 Global 级别变量时，对于 MySQL 租户，要求当前用户拥有 <code>SUPER</code> 权限或 <code>ALTER SYSTEM</code> 权限；对于 Oracle 租户，要求当前用户拥有 <code>ALTER SYSTEM</code> 权限。设置前，请确认您的权限。用户权限的详细说明，参见 <a href="../../500.security-and-permissions/300.access-control/200.user-and-permission/100.user-and-permission-overview.md">用户和权限概述</a>。</p>
   </main>
 
 下文示例中的系统变量 `ob_query_timeout` 用于设置对 SQL 语句进行查询操作的超时时间，单位是微秒。在进行大数据查询操作时，就可以通过调大系统变量 `ob_query_timeout` 的值，避免查询超时导致语句执行失败。
