--- a/zh-CN/900.release-notes/10200.community-edition-history-release/9890.V4.2/9810.ob-420_ce.md
+++ b/zh-CN/900.release-notes/10200.community-edition-history-release/9890.V4.2/9810.ob-420_ce.md
@@ -1,10 +1,10 @@
-# OceanBase 数据库企业版 V4.2.0
+# OceanBase 数据库社区版 V4.2.0
 
 ## V4.2.0_CE Beta
 
 ### 版本信息
 
-* 发布时间：2023 年 7 月 31 日
+* 发布时间：2023 年 8 月 2 日
 * 版本号：V4.2.0_CE Beta
 * 版本说明：Beta 版本解决了大部分缺陷，并趋于稳定。推荐测试环境使用。
 
