--- a/zh-CN/700.reference/200.administrator-guide/300.database-object-management/200.manage-object-of-oracle-mode/900.manage-dblink-of-oracle-mode.md
+++ b/zh-CN/700.reference/200.administrator-guide/300.database-object-management/200.manage-object-of-oracle-mode/900.manage-dblink-of-oracle-mode.md
@@ -77,7 +77,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 如果要访问远端的 Oracle 数据库，您可以创建 OceanBase 数据库的 Oracle 租户到 Oracle 数据库的 DBLink。当前 DBLink 仅支持只读操作。
 
 ```sql
-obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY password OCI HOST 'ip:port/oracle_sid';
+obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY password OCI HOST 'ip:port/oracle_service_name';
 ```
 
 语句使用说明：
@@ -98,7 +98,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY 
 
 * `port`：指定远端 Oracle 数据库实例的端口号。
 
-* `oracle_sid`：远端 Oracle 数据库的 SID。
+* `oracle_service_name`：远端 Oracle 数据库服务的名称。
 
 创建连接到远端 Oracle 数据库的 DBLink 的示例如下：
 
