--- a/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/100.create-a-dblink-of-oracle-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/100.create-a-dblink-of-oracle-mode.md
@@ -106,7 +106,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 创建 OceanBase 数据库到 Oracle 数据库的 DBLink 的 SQL 语法如下：
 
 ```sql
-obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY password OCI HOST 'ip:port/oracle_sid';
+obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY password OCI HOST 'ip:port/oracle_service_name';
 ```
 
 语句使用说明：
@@ -125,7 +125,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY 
 
 * `port`：指定远端 Oracle 数据库实例的端口号。
 
-* `oracle_sid`：远端 Oracle 数据库的 SID。
+* `oracle_service_name`：远端 Oracle 数据库服务的名称。
 
 创建连接到远端 Oracle 数据库的 DBLink 的示例如下：
 
