--- a/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1700.oceanbase-all-virtual-table-mgr.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1700.oceanbase-all-virtual-table-mgr.md
@@ -30,7 +30,7 @@
 | max_log_ts | bigint(20) unsigned | NO | 该表包含数据对应的日志时间戳范围的上界，即 [end_log_ts, max_log_ts] 间的数据不一定完整 |
 | version | bigint(20) | NO | 该表的版本 |
 | logical_data_version | bigint(20) | NO | 该表的逻辑数据版本 |
-| size | bigint(20) | NO | 表大小 |
+| size | bigint(20) | NO | 该表包含数据的大小 |
 | compact_row | bigint(20) | NO | 是否包含 Compact Tow |
 | is_active | bigint(20) | NO | 是否是 Active Memtable |
 | timestamp | bigint(20) | NO | Memtable 的创建时间   |
