--- a/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1800.oceanbase-all-virtual-partition-info.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1800.oceanbase-all-virtual-partition-info.md
@@ -37,7 +37,7 @@
 | net_out_rate | double | NO | 已废弃 |
 | net_out_bytes_rate | double | NO | 已废弃 |
 | min_log_service_ts | bigint(20) | NO | 副本当前日志服务提供的同步位点 |
-| min_trans_service_ts | bigint(20) | NO | 当前副本所处的 Prepare 快照是所有活跃且正在进行两阶段提交过程的事务中最小的 |
+| min_trans_service_ts | bigint(20) | NO | 副本当前所有活跃事务中最小的 Prepare 快照 |
 | min_replay_engine_ts | bigint(20) | NO | 副本当前日志回放的最大连续回放位点 <main id="notice" type='explain'><h4>说明</h4><p>仅对 Follower 副本有效。</p></main> |
 | is_need_rebuild | tinyint(4) | NO | 副本是否需要执行 Rebuild |
 | pg_partition_count | bigint(20) | NO | 如果副本是 Partition Group，表示其中包含的 Partition 数量 |
