--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/300.xmlelement-function-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/300.xmlelement-function-of-oracle-mode.md
@@ -19,11 +19,11 @@ XMLELEMENT ( [ ENTITYESCAPING | NOENTITYESCAPING ]
 | 字段 | 说明 |
 | --- | --- |
 | ENTITYESCAPING &#124; NOENTITYESCAPING | 可选项，指定元素的名字和内容是否需要强制转译的关键字。建议直接使用表达式默认的行为`ENTITYESCAPING`。 |
-| NAME | 指定根元素名称为文字标识符的关键字，为可选项。 |
-| EVALNAME | 指定根元素名称是计算结果为字符串的关键字。 |
+| NAME | 指定根元素名称为文字标识符的关键字，`NAME` 表示其后面的值就是标识符，为可选项。 |
+| EVALNAME | 指定根元素名称是计算结果为字符串的关键字。`EVALNAME` 表示其后面的值需要经过计算获取结果。 |
 | identifier | 指定字符串类型的标签名。 |
-| value_expr | 指定生成的标签值或者标签内容，作为元素内容时可以嵌套其他 XML 表达式来作为根元素下的子元素。 |
-| XML_attributes_clause | 可选项，指定元素属性的表达式，具体信息参见 XMLATTRIBUTES。 |
+| value_expr | 元素值表达式。该参数可以是其他元素也可以是文本。如果是其他元素，可以是 XMLType 列或者 `XMLELEMENT`、`XMLAGG` 等生成 XMLType 的表达式。 |
+| XML_attributes_clause | 可选项，指定元素属性的表达式，具体信息参见 [XMLATTRIBUTES](200.xmlattributes-function-of-oracle-mode.md)。 |
 | c_alias | 指定内容别名的字符串类型。 |
 
 ## 返回类型
