--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/400.xmlparse-function-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/200.construct-xmltype-data-functions-of-oracle-mode/400.xmlparse-function-of-oracle-mode.md
@@ -16,7 +16,7 @@ XMLPARSE
 | 字段 | 说明 |
 | --- | --- |
 | DOCUMENT | 指定解析的内容必须为一个单根节点的 XML 文档。`DOCUMENT` 可以带声明头也可以不带。 |
-| CONTENT | 指定解析的内容必须为一个有效的 XML 片段，但不一定合法。`CONTENT` 一定不带声明头，否则会报错。 |
+| CONTENT | 指定解析的内容必须为一个有效的 XML 片段。`CONTENT` 一定不带声明头，否则会报错。 |
 | value_expr | 指定被解析的字符串。结果的字符类型可以为 `CHAR`、`VARCHAR2`、`NCHAR`、`NVARCHAR2` 或 `CLOB`。
 注意：如果 `value_expr` 计算结果为 `NULL`，函数也会返回 `NULL`。 |
 | WELLFORMED | 如果标记 `WELLFORMED`，将不执行解析内容的有效性检查，为可选项。 |
